welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:8: error: value T1 is not a member of Int
  for ( i <- 0 to num.T1-1 ){
                      ^